Agentforce/force-app/main/default/objects/Lead/fields/Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services__c</fullName>
    <label>Additional Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundled Soft Services</fullName>
            </value>
            <value>
                <fullName>Car Park Management</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Fogging</fullName>
            </value>
            <value>
                <fullName>Horticulture &amp; Vegetation</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Industrial Painting</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>M&amp;E Projects</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Ports &amp; Rail Services</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Stewarding</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Total Facilities Management</fullName>
            </value>
            <value>
                <fullName>Washroom &amp; Hygiene</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Window Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>