Agentforce/force-app/main/default/objects/Lead/fields/Annual_Revenue_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Bracket__c</fullName>
    <description>Bracket ranges for Annual Revenue</description>
    <label>Annual Revenue Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>from 1 to 5 Million</fullName>
            </value>
            <value>
                <fullName>from 100 to 200 Million</fullName>
            </value>
            <value>
                <fullName>from 5 to 50 Million</fullName>
            </value>
            <value>
                <fullName>from 50 to 100 Million</fullName>
            </value>
            <value>
                <fullName>Less than 1 Million</fullName>
            </value>
            <value>
                <fullName>More than 200 Million</fullName>
            </value>
            <value>
                <fullName>1 - 5 M</fullName>
            </value>
            <value>
                <fullName>100 - 200 M</fullName>
            </value>
            <value>
                <fullName>5 - 50 M</fullName>
            </value>
            <value>
                <fullName>50 - 100 M</fullName>
            </value>
            <value>
                <fullName>&lt; 1 M</fullName>
            </value>
            <value>
                <fullName>&gt; 200 M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>