Agentforce/force-app/main/default/objects/Lead/fields/AskNicely_Consent_Requested__c.field-meta.xml
<CustomField>
    <fullName>AskNicely_Consent_Requested__c</fullName>
    <description>Date Lead asked for AskNicely Consent</description>
    <label>AskNicely Consent Requested</label>
    <type>Date</type>
</CustomField>