Agentforce/force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-109 - checkbox to be used in the BANT validation</description>
    <inlineHelpText>We are speaking to the right people from an Authority perspective. Decision Makers, Influencers etc.</inlineHelpText>
    <label>Authority</label>
    <type>Checkbox</type>
</CustomField>