Agentforce/force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-109 - checkbox to be used in the BANT validation</description>
    <inlineHelpText>Customer has a realistic budget for the work to be done.</inlineHelpText>
    <label>Budget</label>
    <type>Checkbox</type>
</CustomField>