Agentforce/force-app/main/default/objects/Lead/fields/Change_Owner_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_Date__c</fullName>
    <description>AD-52 Date when a Lead&apos;s owner is changed from Telemarketing queue to a user</description>
    <label>Change Owner Date</label>
    <type>Date</type>
</CustomField>