Agentforce/force-app/main/default/objects/Lead/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Used to determine which organisation has ownership of this record</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Classification</valueSetName>
    </valueSet>
</CustomField>