Agentforce/force-app/main/default/objects/Lead/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>AD-47 - date field to capture the date the lead is closed</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>