Agentforce/force-app/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>AD-23 - information to capture the reason why a Lead has been closed</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Client Withdrawn</fullName>
            </value>
            <value>
                <fullName>Closed Site</fullName>
            </value>
            <value>
                <fullName>Financial Risk</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Low Value</fullName>
            </value>
            <value>
                <fullName>No Longer at Business</fullName>
            </value>
            <value>
                <fullName>No Relationship</fullName>
            </value>
            <value>
                <fullName>No Requirements</fullName>
            </value>
            <value>
                <fullName>Not Decision-Maker</fullName>
            </value>
            <value>
                <fullName>Not in Strategy</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Spam Enquiry</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Trade Unions</fullName>
            </value>
            <value>
                <fullName>Unknown Contact</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>