Agentforce/force-app/main/default/objects/Lead/fields/Closure_Details__c.field-meta.xml
<CustomField>
    <fullName>Closure_Details__c</fullName>
    <inlineHelpText>Provide further information on why the lead has been closed.</inlineHelpText>
    <label>Closure Details</label>
    <type>TextArea</type>
</CustomField>