Agentforce/force-app/main/default/objects/Lead/fields/Colleague_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Colleague_Referral_Email__c</fullName>
    <description>AD-40 - email address field to capture the email for the colleague that has made the referral</description>
    <label>Colleague Referral Email</label>
    <type>Email</type>
</CustomField>