Agentforce/force-app/main/default/objects/Lead/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <description>Consent Date- Data Dictionary Consolidation</description>
    <label>Consent Date</label>
    <type>DateTime</type>
</CustomField>