Agentforce/force-app/main/default/objects/Lead/fields/Consent_Information__c.field-meta.xml
<CustomField>
    <fullName>Consent_Information__c</fullName>
    <description>Consent Information- Data Dictionary Consolidation</description>
    <label>Consent Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>