Agentforce/force-app/main/default/objects/Lead/fields/Contract_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Date__c</fullName>
    <description>Date when the existing contract is to be reviewed</description>
    <label>Contract Review Date</label>
    <type>Date</type>
</CustomField>