Agentforce/force-app/main/default/objects/Lead/fields/Contract_Term_String__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_String__c</fullName>
    <description>Displays the overall contract term year and months</description>
    <formula>IF(Estimated_End_Date__c - Estimated_Start_Date__c &gt;= 364,
    IF(ISBLANK(Contract_Term_Years__c), NULL,TEXT(Contract_Term_Years__c) &amp; &quot; Year&quot; &amp;
                IF(
                    OR(Estimated_End_Date__c - Estimated_Start_Date__c &gt;= 729,
                       Estimated_End_Date__c - Estimated_Start_Date__c &lt; 364
                       ),                        
                    &quot;s&quot;, NULL))
        , NULL) &amp;
IF(
				OR(
								Contract_Term_Months__c != 0,
								Estimated_End_Date__c - Estimated_Start_Date__c &lt; 30
								),
				&quot; &quot; &amp; TEXT(Contract_Term_Months__c) &amp; &quot; Months&quot;, NULL)</formula>
    <label>Contract Term</label>
    <type>Text</type>
</CustomField>