Agentforce/force-app/main/default/objects/Lead/fields/Convert_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Convert_Criteria_Met__c</fullName>
    <description>Checks if Lead conversion criteria has been met to surface warning. Allow Lead to be converted so long as Reference is populated.</description>
    <formula>AND(
    NOT(ISNULL( Reference__c )),
				NOT(ISNULL( Company))
)</formula>
    <label>Convert Criteria Met</label>
    <type>Checkbox</type>
</CustomField>