Agentforce/force-app/main/default/objects/Lead/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <defaultValue>CASE($User.Corporate_Type__c,
				&quot;Group&quot;,&quot;Group&quot;,
				&quot;Automotive&quot;,&quot;Automotive&quot;,
					&quot;Facilities&quot;
				)</defaultValue>
    <description>AD-35 - Track the corporate type against a Lead</description>
    <label>Corporate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corporate_Type</valueSetName>
    </valueSet>
</CustomField>