Agentforce/force-app/main/default/objects/Lead/fields/Create_New_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-967 - Checkbox to prompt the creation of a new Enquiry record in Salesforce</description>
    <label>Create New Enquiry</label>
    <type>Checkbox</type>
</CustomField>