Agentforce/force-app/main/default/objects/Lead/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <formula>CreatedBy.Full_Name__c</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>