Agentforce/force-app/main/default/objects/Lead/fields/Creator_Country__c.field-meta.xml
<CustomField>
    <fullName>Creator_Country__c</fullName>
    <formula>CreatedBy.Country</formula>
    <label>Creator Country</label>
    <type>Text</type>
</CustomField>