Agentforce/force-app/main/default/objects/Lead/fields/Custom_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Converted_Date__c</fullName>
    <description>AD-47 - date field to capture the date the lead was converted</description>
    <label>Custom Converted Date</label>
    <type>Date</type>
</CustomField>