Agentforce/force-app/main/default/objects/Lead/fields/DB_Company_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>DB_Company_Reg_No__c</fullName>
    <label>Company Reg No</label>
    <type>TextArea</type>
</CustomField>