Agentforce/force-app/main/default/objects/Lead/fields/DB_Created_Date_without_Time__c.field-meta.xml
<CustomField>
    <fullName>DB_Created_Date_without_Time__c</fullName>
    <description>DB Created Date without Time- Data Dictionary Consolidation</description>
    <label>DB Created Date without Time</label>
    <type>Date</type>
</CustomField>