Agentforce/force-app/main/default/objects/Lead/fields/Different_Country__c.field-meta.xml
<CustomField>
    <fullName>Different_Country__c</fullName>
    <formula>Creator_Country__c  &lt;&gt;   Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different Country</label>
    <type>Checkbox</type>
</CustomField>