Agentforce/force-app/main/default/objects/Lead/fields/dnb_exclude_company__c.field-meta.xml
<CustomField>
    <fullName>dnb_exclude_company__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude from Dun &amp; Bradstreet Connect updates</description>
    <label>Exclude from D&amp;B Connect</label>
    <type>Checkbox</type>
</CustomField>