Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Company_Matched__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Company_Matched__c</fullName>
    <description>Determines if D&amp;B Company Profile is matched.</description>
    <formula>NOT(ISBLANK(DNBConnect__D_B_Connect_Company_Profile__c))</formula>
    <label>D&amp;B Company Matched</label>
    <type>Checkbox</type>
</CustomField>