Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Failure_Score_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Failure_Score_Assessment_Date__c</fullName>
    <formula>DATE(
    VALUE(LEFT(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_failScor_Dt__c, 4)), 
    VALUE(MID(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_failScor_Dt__c, 6, 2)), 
    VALUE(RIGHT(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_failScor_Dt__c, 2))
)</formula>
    <label>D&amp;B Failure Score Assessment Date</label>
    <type>Date</type>
</CustomField>