Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Financial_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Financial_Assessment_Date__c</fullName>
    <description>Date of Last D&amp;B Financial Assessment</description>
    <formula>DATE(
VALUE(LEFT(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_ScorDt__c, 4)),
VALUE(MID(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_ScorDt__c, 6, 2)),
VALUE(RIGHT(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_ScorDt__c, 2))
)</formula>
    <label>D&amp;B Financial Assessment Date</label>
    <type>Date</type>
</CustomField>