Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Financial_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Financial_Risk_Indicator__c</fullName>
    <description>Latest D&amp;B Risk Rating</description>
    <formula>VALUE(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_riskSegm__c)</formula>
    <label>D&amp;B Financial Risk Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>