Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Financial_Strength_Rating__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Financial_Strength_Rating__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_stdRtng_FinStrength__c</formula>
    <label>D&amp;B Financial Strength Rating</label>
    <type>Text</type>
</CustomField>