Agentforce/force-app/main/default/objects/Lead/fields/DNBConnect_Max_Recommended_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect_Max_Recommended_Credit_Limit__c</fullName>
    <description>D&amp;B Maximum Recommended Credit Limit</description>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_curr__c &amp; &quot; &quot; &amp; 
IF(
    DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c &lt; 1000, 
    TEXT(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c)), 

    IF(
        DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c &lt; 1000000,
        TEXT(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c / 1000)) &amp; &quot;,&quot; &amp;
        LPAD(TEXT(MOD(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c), 1000)), 3, &quot;0&quot;), 

        TEXT(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c / 1000000)) &amp; &quot;,&quot; &amp;
        LPAD(TEXT(MOD(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c / 1000), 1000)), 3, &quot;0&quot;) &amp; &quot;,&quot; &amp;
        LPAD(TEXT(MOD(FLOOR(DNBConnect__D_B_Connect_Company_Profile__r.dbAsmt_CredLimRecom_maxRecomLim_value__c), 1000)), 3, &quot;0&quot;)
    )
)</formula>
    <label>D&amp;B Max Recommended Credit Limit</label>
    <type>Text</type>
</CustomField>