Agentforce/force-app/main/default/objects/Lead/fields/Domestic_Ultimate_Country__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Country__c</fullName>
    <description>Domestic Ultimate Country- Data Dictionary Consolidation</description>
    <label>Domestic Ultimate Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>