Agentforce/force-app/main/default/objects/Lead/fields/Enquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Description__c</fullName>
    <description>AD-967 - Stores the description of the inbound Enquiry</description>
    <label>Enquiry Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>