Agentforce/force-app/main/default/objects/Lead/fields/Enquiry_Service__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Service__c</fullName>
    <description>Stores the Service that the customer has enquired about</description>
    <label>Enquiry Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Corporate_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Enquiry_Service</valueSetName>
    </valueSet>
</CustomField>