Agentforce/force-app/main/default/objects/Lead/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publicly owned</fullName>
            </value>
            <value>
                <fullName>Publicly Traded Company</fullName>
            </value>
            <value>
                <fullName>Privately owned</fullName>
            </value>
            <value>
                <fullName>State owned Enterprise</fullName>
            </value>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>