Agentforce/force-app/main/default/objects/Lead/fields/Estimated_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Value__c</fullName>
    <description>Estimated Annual Contract Value</description>
    <inlineHelpText>Estimated Annual Contract Value</inlineHelpText>
    <label>Estimated Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>