Agentforce/force-app/main/default/objects/Lead/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <description>Track the estimated end date of the Contract</description>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>