Agentforce/force-app/main/default/objects/Lead/fields/Estimated_Sites__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sites__c</fullName>
    <label># Estimated Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>