Agentforce/force-app/main/default/objects/Lead/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>Estimated New Contract Start Date</description>
    <inlineHelpText>Estimated start date of the new services</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>