Agentforce/force-app/main/default/objects/Lead/fields/Event_Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Event_Dietary_Requirements__c</fullName>
    <inlineHelpText>Used in marketing forms for events.</inlineHelpText>
    <label>Event Dietary Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>