Agentforce/force-app/main/default/objects/Lead/fields/Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-37 - lookup to the associated Account on the Lead</description>
    <label>Existing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>Related_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>