Agentforce/force-app/main/default/objects/Lead/fields/Existing_Account_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Mapped__c</fullName>
    <description>Determines if an Existing Account is Mapped to the Lead</description>
    <formula>NOT(ISBLANK(Existing_Account__c))</formula>
    <label>Existing Account Mapped</label>
    <type>Checkbox</type>
</CustomField>