Agentforce/force-app/main/default/objects/Lead/fields/Existing_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Type__c</fullName>
    <description>Identifies the matched Existing Account Type</description>
    <formula>TEXT(Existing_Account__r.Account_Type__c)</formula>
    <label>Existing Account Type</label>
    <type>Text</type>
</CustomField>