Agentforce/force-app/main/default/objects/Lead/fields/Existing_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Type__c</fullName>
    <description>Identifies the Customer Type of an Existing Account</description>
    <formula>Existing_Account__r.Customer_Type_f__c</formula>
    <label>Existing Customer Type</label>
    <type>Text</type>
</CustomField>