Agentforce/force-app/main/default/objects/Lead/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id- Data Dictionary Consolidation</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>