Agentforce/force-app/main/default/objects/Lead/fields/Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_End__c</fullName>
    <description>Financial Year End- Data Dictionary Consolidation</description>
    <label>Financial Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>