Agentforce/force-app/main/default/objects/Lead/fields/FM_Spend__c.field-meta.xml
<CustomField>
    <fullName>FM_Spend__c</fullName>
    <description>FM Spend- Data Dictionary consolidation</description>
    <label>FM Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>