Agentforce/force-app/main/default/objects/Lead/fields/FOI_Generated__c.field-meta.xml
<CustomField>
    <fullName>FOI_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-65 - Denotes whether we have created an FOI against this Lead</description>
    <label>FOI Generated</label>
    <type>Checkbox</type>
</CustomField>